# edgetx

./: CMakeLists.txt
.github/workflows/: nightly.yml  win-cpn-32.yml  win_cpn-64.yml
cmake/: GenericDefinitions.cmake  Macros.cmake  NativeTargets.cmake  QtDefs.cmake
cmake/toolchain/: arm-none-eabi.cmake  native.cmake
companion/src/: CMakeLists.txt  companion.cpp  companion.qrc  constants.h  logsdialog.cpp  logsdialog.h  mainwindow.cpp  mainwindow.h  mdichild.cpp  modelprinter.cpp
companion/src/datamodels/: CMakeLists.txt  compounditemmodels.cpp
companion/src/firmwares/: CMakeLists.txt  boardfactories.cpp  boardfactories.h  boardjson.cpp  boardjson.h  boards.cpp  boards.h  datahelpers.cpp  datahelpers.h  generalsettings.cpp  generalsettings.h  jsonboard.cpp  jsonboard.h  modeldata.cpp  modeldata.h  moduledata.cpp  moduledata.h  multiprotocols.cpp  multiprotocols.h  multiprotocols_diy.cpp  multiprotocols_diy.h  multiprotocols_diy_inc.h  multiprotocols_radio.cpp  multiprotocols_radio.h  rawsource.cpp  trainermoduledata.cpp  trainermoduledata.h
companion/src/generaledit/: CMakeLists.txt  generalsetup.cpp  generalsetup.h  hardware.cpp
companion/src/hw_defs/: nv14.json  x12s.json  x7access.json  x9d+.json  x9d+2019.json  x9d.json  x9e.json
companion/src/wizards/: CMakeLists.txt  modelwizarddata.cpp  modelwizarddata.h  modelwizarddialog.cpp  modelwizarddialog.h  sdcardwizarddialog.cpp  sdcardwizarddialog.h
radio/src/: CMakeLists.txt  cli.cpp  datastructs_private.h  lv_conf.h  opentx.cpp  strhelpers.h
tools/: setup_buildenv_msys2_stage2.sh
(+132 files in other folders)
